--- a/css/my-style.css
+++ b/css/my-style.css
@@ -40,7 +40,7 @@ a:hover {
 }
 
 .main {
-    background-image: url(..);
+    background-image: url(../img/content_bg.png);
     background-repeat: repeat-y;
     background-position: left;
 }
